chore: 完成BEMP项目全量技能与规则迭代更新
本次提交完成了BEMP项目的全面迭代更新，涵盖以下核心变更：
1.  重构测试体系：将测试用例从bemp-testcase-generator和bemp-webapp-testing迁移至bemp-test-common统一管理，实现单一数据源
2.  优化个性化开发规范：完善@CustomizedBean注解使用规则，区分继承产品实现类和仅实现个性化接口的场景
3.  更新数据库操作能力：新增连接保活与自动重连机制，完善版本兼容性检测
4.  补充多项核心技能文档：新增自动化部署、代码审查、性能测试、文档转换等20+项技能反向构建提示词
5.  修复前端测试配置：将localhost替换为127.0.0.1解决Windows网络问题，新增测试结束自动清理规范
6.  优化依赖管理：调整bemp-advanced-doc-generator依赖包顺序，新增xlsx依赖
7.  完善项目规则：更新通用强制准则、流程门禁规则与并行启动规范
8.  新增测试数据目录与模板：创建bemp-test-common/test-data目录与数据导出报告模板
9.  修复代码扫描脚本：优化@CustomizedBean注解检查逻辑，仅针对继承产品实现类的类进行检查